# settings_persist

./: CMakeLists.txt  README.md  settings_auto_generated.c  settings_persist.c  settings_persist.h  settings_persist_log.h
code_generator/: generate_settings_from_ini.py  settings(for_code_generator).ini
